# bend-language-server

./: CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
editors/code/: CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
editors/code/src/: binaries.ts  extension.ts  hello.bend
editors/code/syntaxes/: bend.tmLanguage.json
src/: lib.rs  main.rs
src/core/: diagnostic.rs  diagnostics.rs  document.rs  mod.rs  semantic_token.rs  session.rs
src/language/: conversion.rs  mod.rs
src/server/: mod.rs
src/utils/: color_wrapper.rs  lsp_log.rs  mod.rs  rope.rs
