[package]
name = "bend-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
bend-lang = { git = "https://github.com/HigherOrderCO/Bend.git" }
tree-sitter-bend = { git = "https://github.com/HigherOrderCO/tree-sitter-bend.git" }
tower-lsp = { version = "0.20", features = ["proposed"] }
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dashmap = "6.0"
lazy_static = "1.5"
itertools = "0.13"
ropey = "1.6"
regex = "1.7"

[build-dependencies]
cc = "1.1"
