[package]
name = "bend-language-server"
version = "0.2.37-alpha.3"
description = "Language server for the Bend programming language"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/HigherOrderCO/bend-language-server"
homepage = "https://higherorderco.com/"
readme = "README.md"
keywords = ["bend", "language-server", "lsp"]
categories = ["text-editors", "development-tools"]
exclude = [
    ".vscode",
    "editors",
    ".vscodeignore",
    "package.json",
    "pnpm-lock.yaml",
    "tsconfig.json",
    "webpack.config.js",
]

[dependencies]
bend-lang = { version = "0.2.37-alpha.1" }
tree-sitter-bend = { version = "0.2.37-alpha.2" }
tower-lsp = { version = "0.20", features = ["proposed"] }
tokio = { version = "1.39", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "io-std",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dashmap = "6.0"
lazy_static = "1.5"
itertools = "0.13"
ropey = "1.6"
regex = "1.7"
